--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,9 @@ body {
   margin: 10px;
 }
 
-
-
-
-
-/* .travel {
-  box-shadow: 3px 3px;
+.travel {
   border: 1px solid black;
   height: 300px;
-  width: 300px;
-  margin:
-} */
+  width: 360px;
+  margin-bottom: 10px;
+}
