--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 .travel {
+  position: relative;
   border: 1px solid black;
   height: 300px;
   width: 360px;
@@ -19,4 +20,13 @@ body {
   background-image: url('../img/rome.jpg');
   background-position: center;
   background-size: cover;
+}
+
+.box1 span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
+  color: white;
 }
