--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ body {
   height: 300px;
   width: 360px;
   margin-bottom: 10px;
+  z-index: 0;
+}
+
+.opacity {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1;
 }
 
 .box1 {
@@ -22,6 +30,7 @@ body {
   background-size: cover;
 }
 .box1 span {
+  z-index: -1;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -36,6 +45,7 @@ body {
   background-size: cover;
 }
 .box2 span {
+  z-index: -1;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -50,6 +60,7 @@ body {
   background-size: cover;
 }
 .box3 span {
+  z-index: -1;
   position: absolute;
   top: 50%;
   left: 50%;
