--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,19 @@ body {
 }
 
 .travel {
+  z-index: 0;
   position: relative;
   border: 1px solid black;
   height: 300px;
   width: 360px;
   margin-bottom: 10px;
-  z-index: 0;
 }
 
 .opacity {
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 1;
 }
 
 .box1 {
@@ -37,6 +37,9 @@ body {
   transform: translate(-50%, -50%);
   font-size: 30px;
   color: white;
+}
+.travel:hover .opacity {
+  visibility: hidden;
 }
 
 .box2 {
