--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@ body {
   margin: 10px;
 }
 
+.menu {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .travel {
   z-index: 0;
   position: relative;
