--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
   margin: 10px;
 }
 
+span {
+  text-shadow: 1px 0px 0px #000000;
+}
+
 .menu {
   position: absolute;
   top: 50%;
@@ -23,6 +27,7 @@ body {
   width: 360px;
   margin-bottom: 10px;
   cursor: pointer;
+  box-shadow: 2px 2px 2px black;
 }
 
 .opacity {
@@ -30,6 +35,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+}
+.travel:hover .opacity {
+  visibility: hidden;
 }
 
 .box1 {
@@ -45,9 +53,6 @@ body {
   transform: translate(-50%, -50%);
   font-size: 30px;
   color: white;
-}
-.travel:hover .opacity {
-  visibility: hidden;
 }
 
 .box2 {
