--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
 }
 
 span {
-  text-shadow: 1px 0px 0px #000000;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 .menu {
@@ -22,18 +23,18 @@ span {
 .travel {
   z-index: 0;
   position: relative;
-  border: 1px solid black;
   height: 300px;
   width: 360px;
   margin-bottom: 10px;
-  cursor: pointer;
+  border: 1px solid black;
   box-shadow: 2px 2px 2px black;
+  cursor: pointer;
 }
 
 .opacity {
   z-index: 1;
-  width: 100%;
   height: 100%;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.4);
 }
 .travel:hover .opacity {
