--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,21 @@
   font-family: sans-serif;
 }
 
-body {
-  margin: 10px;
-}
-
 span {
   text-shadow: 2px 2px 2px #000000;
+}
+
+.container {
+  position: relative;
+  padding: 10px 0;
 }
 
 .menu {
   position: absolute;
   top: 50%;
   left: 50%;
+  height: 100%;
+  padding: 10px 0;
   transform: translate(-50%, -50%);
 }
 
